--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.result{
+  text-align: center;
+}
+
 .font-loader{
   font-family: 'Hanalei Fill';
   padding: 0%;
@@ -36,9 +40,10 @@
 }
 
 .footer {
-  background-color: #d1c4e9;
+  background-color: #f3f739;
   margin: 0px auto;
   padding: 20px 0px 20px 0px;
+  height: 110px;
 }
 
 .nav-link {
@@ -67,25 +72,12 @@ address {
 
 .container {
   margin: 50px auto;
+  padding: 50px;
+  padding-bottom: 150px;
   display: flex;
   flex-direction: column;
   border-radius: 20px;
   max-width: 90%;
-}
-
-.img {
-  margin: 20px;
-  border-radius: 15px;
-  opacity: 0.5;
-  width: 700px;
-  height: 450px;
-}
-
-.xrayImg {
-  margin: 20px;
-  border-radius: 15px;
-  width: 700px;
-  height: 450px;
 }
 
 .input-style {
@@ -94,41 +86,6 @@ address {
   width: 70%;
   outline: "none";
 }
-
-.pill-items {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.tabname {
-  background-color: #5cdb95;
-  width: 180px;
-  height: 50px;
-  text-align: center;
-  color: #05288b;
-  padding: 10px;
-  border-radius: 40px;
-  border: none;
-  margin: 10px 30px;
-  cursor: pointer;
-  font-size: 18px;
-  font-weight: 600;
-}
-
-.xray-button {
-  margin: auto 30px;
-}
-
-.tabname:hover {
-    box-shadow: -1px 7px 14px -3px rgba(0,0,0,0.1);
-}
-
-.tabname:active {
-    box-shadow: -1px 7px 14px -1px rgba(0,0,0,0.21);
-}
-
-
 
 /* MEDIA */
 @media (max-width: 735px) {
@@ -140,10 +97,6 @@ address {
     font-size: 20px;
   }
 
-  .img {
-    width: 90%;
-    height: 90%;
-  }
 
   .input-style {
     width: 100%;
